🐛 fix: 예외 핸들러 중복 코드 삭제